# signal-verification

./: .envrc  .gitignore  .gitmodules  Makefile  README.md  buffer.py  buffer.saw  build-virtenv.sh  curve.saw  env_server.py  flexible_struct_buffer.bc  flexible_struct_buffer.c  flexible_struct_buffer.saw  helpers.py  helpers.saw  load.py  load.saw  main.py  main.saw  mypy.ini  protocol.py  protocol.saw  pyproject.toml  requirements.txt  signal_protocol.saw
c/: dummy_signal_crypto_provider.c
cryptol/: HMAC.cry
python/: buffer_helpers.py  curve.py  load.py  protocol.py  saw_helpers.py  signal_protocol.py
saw/: curve.saw  protocol.saw  signal_protocol.saw
